adding event conditions

--- a/code_game.ipynb
+++ b/code_game.ipynb
@@ -26,13 +26,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3bb034d3-29b2-4f38-aaca-f2d52840916b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of choosing heads is 0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "probability_heads = 1 / len(sample_space)\n",
+    "print(f\"Probability of choosing heads is {probability_heads}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2a55c9a3-428d-4420-a55f-b77547d49524",
    "metadata": {},
    "outputs": [],
    "source": [
-    "probability_heads = 1 / len(sample_space)\n",
-    "print(f\"Probability"
+    "#Let's compute two even conditions one where the coin lands on either heads or tails and another where the coin lands on neither heads or tails\n",
+    "def is_heads_or_tails(outcome): return outcome in {'Heads','Tails'}\n",
+    "def is_neither(outcome): return not is_heads_or_tails(outcome)"
    ]
   }
  ],
